tests/baselines/reference/newOperator.errors.txt
==== tests/cases/compiler/newOperator.ts (11 errors) ====
    interface ifc { }
    // Attempting to 'new' an interface yields poor error
    var i = new ifc();
                ~~~
!!! error TS2095: Could not find symbol 'ifc'.
    
    // Parens are optional
    var x = new Date;
    var y = new Date();
    
    // Target is not a class or var, good error
    var t1 = new 53();
                 ~~
!!! error TS2083: Invalid 'new' expression.
    var t2 = new ''();
                 ~~
!!! error TS2083: Invalid 'new' expression.
    new string;
        ~~~~~~
!!! error TS2095: Could not find symbol 'string'.
    
    // Use in LHS of expression?
    (new Date()).toString();
    
    // Various spacing
    var t3 = new string[]( );
                       ~~
!!! error TS2068: 'new T[]' cannot be used to create an array. Use 'new Array<T>()' instead.
                 ~~~~~~
!!! error TS2095: Could not find symbol 'string'.
    var t4 =
    new
    string
    ~~~~~~
!!! error TS2095: Could not find symbol 'string'.
    [
    ~
        ]
    ~~~~~
!!! error TS2068: 'new T[]' cannot be used to create an array. Use 'new Array<T>()' instead.
        (
            );
    
    // Unresolved symbol
    var f = new q();
                ~
!!! error TS2095: Could not find symbol 'q'.
    
    // not legal
    var t5 = new new Date;
                 ~~~~~~~~
!!! error TS2083: Invalid 'new' expression.
    
    // Can be an expression
    new String;
    
    
    module M {
        export class T {
            x: number;
        }
    }
    
    class S {
        public get xs(): M.T[] {
            return new M.T[];
                          ~~
!!! error TS2068: 'new T[]' cannot be used to create an array. Use 'new Array<T>()' instead.
        }
    }
    